# pip-tools-lab

./: README.md  requirements.1.in  splitting_dependencies .excalidraw
pdm/: .gitignore  .pdm-python  image.sh  init.sh  lock.sh  pyproject.toml  requirements.txt  sync.sh
pip-tools/: Dockerfile  README.md  init.sh  lock.sh  requirements.0.in  requirements.0.txt  requirements.1.txt  requirements.in  sync.sh
poetry/: .gitignore  Dockerfile  README.md  init.sh  lock.sh  pyproject.toml  sync.sh
uv/: .gitignore  init.sh  lock.sh  pyproject.toml  requirements.txt
